[package]
name = "philiprehberger-table-fmt"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Rehberger"]
description = "Terminal table rendering with alignment, borders, Unicode support, and ANSI color awareness"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-table-fmt"
documentation = "https://docs.rs/philiprehberger-table-fmt"
keywords = ["table", "terminal", "cli", "formatting", "display"]
categories = ["command-line-interface", "value-formatting"]

[dependencies]
unicode-width = "0.2"
